     to story text instead
   * Fixed 100% CPU usage on storyscreens with no text (e.g. map screens)
   * Fix ODR issues in gui2
   * Remove the boost 1.33 code in the unit tests
   * Fix regression about broken undo after a multi-turn ("goto") move
   * Fix regression about pathfinding poorly using the teleport ability
   * Added extra wiki comment and updated the extractor

Version 1.7.3:
 * AI:
   * New AI configuration syntax
 * Campaigns:
   * Two Brothers
     * Replaced campaign specific portraits with mainline portraits
   * Under the Burning Suns
     * Fixed bug #13978: UtBS: "stun" ability doesn't modify enemy ZoC
   * Legend of Wesmere
     * Story only scenarios now display the speaker's name in the title.	
     * Ambient sound effects.	
     * Redone the campaign's objectives.	
     * Added the "Dwarfish Scout" to the player's recruit list.
     * Scenario 19 now requires the player to destroy Saurgrath.
     * Scenario 14 redesigned.
     * Scenario 23 implemented Santi's plan to let half the army defect. 	
     * Map updates (mostly new alias terrains added).	
     * Replaced the campaign image with a transparent one (Thanks to Kitty).
 * Editor:
   * Renamed editor2 to editor pretty much everywhere
 * Graphics:
   * New portrait for the Duelist, Mermaid Enchantress/Siren,
     Priestess/Diviner, Merman Fighter/Warrior, Fencer, Drake
     Glider, Merman Hoplite, Goblin Impaler, Rouser, Merman Triton,
     Cavalier, Direwolf Rider, Paladin, Deathblade, Thug, Bandit,
     alternate Goblin Rouser, Revenant, Naga Fighter, Troll.
   * New unit graphics and animations for the Troll Hero, Drake Glider, Sky
     Drake, Hurricane Drake, Drake Burner, Drake Fighter, Drake Warrior.
 * Language and i18n:
   * Updated translations: Czech, Dutch, Estonian, French, German, Hungarian,
     Lithuanian, Polish, Slovak
   * Updated Drake Clasher, Arbiter and Slasher descriptions.
 * Multiplayer:
   * Added a /q alias for /query