@@ -60,6 +60,9 @@ Version 1.7.4:
    * Fix regression about broken undo after a multi-turn ("goto") move
    * Fix regression about pathfinding poorly using the teleport ability
    * Added extra wiki comment and updated the extractor
+ * Animations
+   * Movement have the number of steps done in value and the number of step left in value_second.
+   * new animations pre_movement_anim and post_movement_anim to allow take-off and landing animation
 
 Version 1.7.3:
  * AI:
